Added business rules validatation for unassign loan officer

--- a/api-docs/apiLive.htm
+++ b/api-docs/apiLive.htm
@@ -2546,6 +2546,8 @@ Request Body:
 						<dd>'withdrewbyclient' : Client Withdrew Loan Application</dd>
 						<dd>'undoapproval' : Undo Loan Approval</dd>
 						<dd>'undodisbursal' : Undo Loan Disbursal</dd>
+						<dd>'assignloanofficer' : Assign Loan Officer</dd>
+						<dd>'unassignloanofficer' : Unassign Loan Officer as of today or in past but not beyond assigned date. Does not support unassigning in future date</dd>
 					</dl>
 					<br>
 					<table class=matrixHeading>
