--- a/api-docs/apiLive.htm
+++ b/api-docs/apiLive.htm
@@ -209,6 +209,98 @@
 				</div>
 			</div>
 			<div class="flybar-nav">
+				<h2 class="flybar-button">Group</h2>
+				<div id="toc-menu-client" class="flybar-menu">
+					<div class="tocMatrix">
+						<table class=matrixHeading>
+							<tr class="matrixHeadingBG">
+								<td colspan=2 valign="top"><div class="matrixHeadingVerbs">
+										<table>
+											<tr>
+												<td>RESOURCES</td>
+											</tr>
+										</table>
+									</div></td>
+								<td><table>
+										<tr>
+											<td><div class="matrixHeadingVerbs">POST</div></td>
+										</tr>
+										<tr>
+											<td><div class=matrixHeadingCommands>create/complex
+													update</div></td>
+										</tr>
+									</table></td>
+								<td><table>
+										<tr>
+											<td><div class="matrixHeadingVerbs">GET</div></td>
+										</tr>
+										<tr>
+											<td><div class=matrixHeadingCommands>read</div></td>
+										</tr>
+									</table></td>
+								<td><table>
+										<tr>
+											<td><div class="matrixHeadingVerbs">PUT</div></td>
+										</tr>
+										<tr>
+											<td><div class=matrixHeadingCommands>update</div></td>
+										</tr>
+									</table></td>
+								<td><table>
+										<tr>
+											<td><div class="matrixHeadingVerbs">DELETE</div></td>
+										</tr>
+										<tr>
+											<td><div class=matrixHeadingCommands>delete</div></td>
+										</tr>
+									</table></td>
+							</tr>
+							<tr class="alt">
+								<td><a href="#groups">GROUP</a></td>
+								<td>groups</td>
+								<td><a href="#groups_create">Create a Group</a></td>
+								<td><a href="#groups_list">List Groups</a></td>
+								<td></td>
+								<td><a href="#groups_delete">Delete a Group</a></td>
+							</tr>
+							<tr>
+								<td></td>
+								<td>groups/{group}</td>
+								<td></td>
+								<td><a href="#groups_retrieve">Retrieve a Group</a></td>
+								<td><a href="#groups_update">Update a Group</a></td>
+								<td></td>
+							</tr>
+							<tr class="alt">
+								<td></td>
+								<td>groups/{group}/loans</td>
+								<td></td>
+								<td><a href="#groups_loansummary">Retrieve a Group's
+										Loan Account Summary</a></td>
+								<td></td>
+								<td></td>
+							</tr>
+							<tr>
+								<td></td>
+								<td>groups/{group}/command/assign_loanofficer</td>
+								<td><a href="#groups_assignlo">Assign a Loan Officer</a></td>
+								<td></td>
+								<td></td>
+								<td></td>
+							</tr>
+							<tr class="alt">
+								<td></td>
+								<td>groups/{group}/command/unassign_loanofficer</td>
+								<td><a href="#groups_unassign_lo">Unassign a Loan Officer</a></td>
+								<td></a></td>
+								<td></td>
+								<td></td>
+							</tr>
+						</table>
+					</div>
+				</div>
+			</div>
+			<div class="flybar-nav">
 				<h2 class="flybar-button">Loan</h2>
 				<div id="toc-menu-loan" class="flybar-menu">
 					<div class="tocMatrix">
@@ -2010,6 +2102,308 @@ Request Body:
 					</code>
 				</div>
 			</div>
+
+			<!-- start of Groups api docs -->
+			<a id="groups" name="groups" class="old-syle-anchor">&nbsp;</a>
+			<div class="method-section">
+				<div class="method-description">
+					<h3>Groups</h3>
+					<p>Groups are collection of clients for specific purpose (JLG,SHG, Program etc) </p>
+					<table class=matrixHeading>
+						<tr class="matrixHeadingBG">
+							<td><div class="mifosXHeading2">Field Descriptions</div></td>
+						</tr>
+						<tr class=alt>
+							<td>office_id</td>
+						</tr>
+						<tr>
+							<td class=fielddesc>It stores the officeid of office, to this officer Group belongs.</td>
+						</tr>
+						<tr class=alt>
+							<td>loan_officer_id</td>
+						</tr>
+						<tr>
+							<td class=fielddesc>Id of the officer who manages this group.</td>
+						</tr>
+						<tr class=alt>
+							<td>name</td>
+						</tr>
+						<tr>
+							<td class=fielddesc>Human friendly identity of the Group (Name given to the group).</td>
+						</tr>
+						<tr class=alt>
+							<td>externalId</td>
+						</tr>
+						<tr>
+							<td class=fielddesc>A place to put an external reference for
+								this group e.g. The ID another system uses.<br> If
+								provided, it must be unique.
+							</td>
+						</tr>
+												<tr class=alt>
+						<td>is_deleted</td>
+						</tr>
+						<tr>
+							<td class=fielddesc>Indicator for active or archived groups.
+							</td>
+						</tr>
+					</table>
+				</div>
+			</div>
+			<a id="groups_create" name="groups_create" class="old-syle-anchor">&nbsp;</a>
+			<div class="method-section">
+				<div class="method-description">
+					<h4>Create a Group</h4>
+					<table class=matrixHeading>
+						<tr class="matrixHeadingBG">
+							<td><div class="mifosXHeading2">Mandatory Fields</div></td>
+						</tr>
+						<tr class=alt>
+							<td>name<br>
+								officeId<br>
+								clients
+							</td>
+						</tr>
+					</table>
+				</div>
+				<div class="method-example">
+					<code class="method-declaration">
+						POST https://DomainName/mifosng-provider/api/v1/groups
+					</code>
+					<code class="method-request">
+						POST groups
+						Content-Type: application/json Request Body:
+						{
+						"officeId":"1",
+						"name":"TA Group",
+						"externalId":"",
+						"clientMembers":["82","83","84"]
+						}
+					</code>
+					<code class="method-response">
+						{"resourceId":24,"changes":{}}
+					</code>
+				</div>
+			</div>
+			<a id="groups_list" name="groups_list" class="old-syle-anchor">&nbsp;</a>
+			<div class="method-section">
+				<div class="method-description">
+					<h4>List Groups</h4>
+					<p>Example Requests:</p>
+					<div class=apiClick>groups</div>
+				</div>
+				<div class="method-example">
+					<code class="method-declaration">
+GET https://DomainName/mifosng-provider/api/v1/groups
+					</code>
+					<code class="method-response">
+[{
+    "id": 1,
+    "name": "GWT_2",
+    "externalId": "GWT_EX_ID_2",
+    "officeId": 7,
+    "officeName": "Z2"
+}, {
+    "id": 2,
+    "name": "group22",
+    "externalId": "11234",
+    "officeId": 1,
+    "officeName": "Head Office"
+}, {
+    "id": 3,
+    "name": "PlusOne",
+    "officeId": 22,
+    "officeName": "North Point Office"
+}]
+					</code>
+				</div>
+			</div>
+			<a id="groups_retrieve" name="groups_retrieve"
+				class="old-syle-anchor">&nbsp;</a>
+			<div class="method-section">
+				<div class="method-description">
+					<h4>Retrieve a Group</h4>
+					<p>Example Requests:</p>
+					<div class=apiClick>groups/10</div>
+				</div>
+				<div class="method-example">
+					<code class="method-declaration">
+GET https://DomainName/mifosng-provider/api/v1/groups/10
+					</code>
+					<code class="method-response">
+{
+    "id": 10,
+    "name": "test123",
+    "externalId": "tejjjst",
+    "officeId": 1,
+    "officeName": "Head Office",
+    "clientMembers": [{
+        "id": 1,
+        "displayName": "Willie O\u0027Meara"
+    }]
+}
+					</code>
+				</div>
+			</div>
+			<a id="groups_loansummary" name="groups_loansummary"
+				class="old-syle-anchor">&nbsp;</a>
+			<div class="method-section">
+				<div class="method-description">
+					<h4>Retrieve a Groups's Loan Account Summary</h4>
+					<p>
+						An example of how a loan portfolio summary can be provided. This
+						one contains quite a bit of redundant data (like the counts) 
+					</p>
+					<p>Example Requests:</p>
+					<div class=apiClick>groups/7/loans</div>
+				</div>
+				<div class="method-example">
+					<code class="method-declaration">
+GET https://DomainName/mifosng-provider/api/v1/groups/7/loans
+					</code>
+					<code class="method-response">
+{
+    "anyLoanCount": 1,
+    "pendingApprovalLoanCount": 0,
+    "pendingApprovalLoans": [],
+    "awaitingDisbursalLoanCount": 0,
+    "awaitingDisbursalLoans": [],
+    "activeLoanCount": 1,
+    "openLoans": [{
+        "id": 79,
+        "productId": 1,
+        "productName": "1-PORetailLoan",
+        "accountStatusId": 300
+    }],
+    "closedLoanCount": 0,
+    "closedLoans": [],
+    "anyIndividualLoanCount": 3,
+    "pendingApprovalIndividualLoanCount": 0,
+    "pendingApprovalIndividualLoans": [],
+    "awaitingDisbursalIndividualLoanCount": 0,
+    "awaitingDisbursalIndividualLoans": [],
+    "activeIndividualLoanCount": 3,
+    "openIndividualLoans": [{
+        "id": 80,
+        "productId": 17,
+        "productName": "17-Intrasoft Business Loan",
+        "accountStatusId": 300
+    }, {
+        "id": 81,
+        "productId": 1,
+        "productName": "1-PORetailLoan",
+        "accountStatusId": 300
+    }, {
+        "id": 82,
+        "productId": 13,
+        "productName": "13-A Flat Loan",
+        "accountStatusId": 300
+    }],
+    "closedIndividualLoanCount": 0,
+    "closedIndividualLoans": []
+}
+					</code>
+				</div>
+			</div>
+			<a id="groups_update" name="groups_update" class="old-syle-anchor">&nbsp;</a>
+			<div class="method-section">
+				<div class="method-description">
+					<h4>Update a Group</h4>
+				</div>
+				<div class="method-example">
+					<code class="method-declaration">
+PUT https://DomainName/mifosng-provider/api/v1/groups/{groupid}
+						</code>
+					<code class="method-request">
+PUT groups/7 
+Content-Type: application/json 
+Request Body:
+{
+    "officeId": "26",
+    "name": "Laxmi SSG U",
+    "externalId": "Unq 2--124",
+    "clientMembers": ["91", "93", "94"]
+}
+					</code>
+					<code class="method-response">
+{
+	"resourceId":7,
+	"changes":{}
+}
+					</code>
+				</div>
+			</div>
+			<a id="groups_assignlo" name="groups_assignlo" class="old-syle-anchor">&nbsp;</a>
+			<div class="method-section">
+				<div class="method-description">
+					<h4>Assign a Loan Officer to Group</h4>
+				</div>
+				<div class="method-example">
+					<code class="method-declaration">
+POST https://DomainName/mifosng-provider/api/v1/groups/{groupid}/command/assign_loanofficer
+						</code>
+					<code class="method-request">
+POST groups/20/command/assign_loanofficer 
+Content-Type: application/json 
+Request Body:
+{
+{"loanOfficerId":"1"}
+}
+					</code>
+					<code class="method-response">
+{
+	"resourceId":20,
+	"changes":{}
+}
+					</code>
+				</div>
+			</div>
+			<a id="groups_unassign_lo" name="groups_unassign_lo" class="old-syle-anchor">&nbsp;</a>
+			<div class="method-section">
+				<div class="method-description">
+					<h4>Unassign a loan officer to a Group</h4>
+				</div>
+				<div class="method-example">
+					<code class="method-declaration">
+POST https://DomainName/mifosng-provider/api/v1/groups/{groupid}/command/assign_loanofficer
+						</code>
+					<code class="method-request">
+POST groups/20/command/unassign_loanofficer 
+Content-Type: application/json 
+Request Body:
+{
+{"loanOfficerId":"1"}
+}
+					</code>
+					<code class="method-response">
+{
+	"resourceId":20,
+	"changes":{}
+}
+					</code>
+				</div>
+			</div>
+						<a id="groups_delete" name="groups_delete" class="old-syle-anchor">&nbsp;</a>
+			<div class="method-section">
+				<div class="method-description">
+					<h4>Delete a Group</h4>
+				</div>
+				<div class="method-example">
+					<code class="method-declaration">
+POST https://DomainName/mifosng-provider/api/v1/groups/{groupid}
+						</code>
+					<code class="method-request">
+DELETE groups/7
+					</code>
+					<code class="method-response">
+{
+	"resourceId":7,
+	"changes":{}
+}
+					</code>
+				</div>
+			</div>
+			<!-- group end anchor grpxxxx -->
 
 			<!-- start of loans api docs -->
 
