Fixing validations for update deposit products

--- a/api-docs/apiLive.htm
+++ b/api-docs/apiLive.htm
@@ -7030,10 +7030,10 @@ Request Body:
 				</div>
 				<div class="method-example">
 					<code class="method-declaration">
-DELETE https://Domain Name/api/v1/savingproducts/{productId}
+DELETE https://Domain Name/api/v1/depositproducts/{productId}
 					</code>
 					<code class="method-request">
-DELETE savingproducts/1
+DELETE depositproducts/1
 Content-Type: application/json
 					</code>
 					<code class="method-response">{ "resourceId": 1 } </code>
